Fix : 음성인식 아이콘 z-index 조정

--- a/src/pages/Game/components/SpeechRecognition/index.scss
+++ b/src/pages/Game/components/SpeechRecognition/index.scss
@@ -3,7 +3,7 @@
   top: 20px;
   right: r(45px);
   left: unset;
-  z-index: 9999;
+  z-index: 1500;
   width: 26px;
   height: 26px;
   cursor: pointer;
